search of solution - rev05